# botlab

./: .gitignore  INSTALL.md  README.md  __init__.py  cursor_rule_template.mdc  install_dependencies.sh  pyproject.toml  requirements.txt  setup_env.sh  use_agents_example.py
agents/: .gitignore  .prompt  AGENT_LOOP_README.md  BASE_AGENT_GUIDE.md  CLAUDE.md  README.md  __init__.py  agent_loop.py  agent_loop_example.py  pyproject.toml  ranked_agent_loop.py  ranked_agent_loop_example.py  run_examples.py  setup.py  use_agents_example.py
agents/agents.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
agents/animator/: __init__.py  agents.py  example.py  pipeline.py  stitch.py  tools.py
agents/editor/: __init__.py  agents.py  example.py  main.py  tools.py
agents/manager/: __init__.py  agents.py  example.py  main.py  tools.py
agents/newsletter/: __init__.py  agents.py  example.py  tools.py
agents/promoter/: __init__.py  agents.py  example.py  linkedin_easy_apply_loop.py  reddit_promoter_loop.py  run_x_promoter.sh  tools.py  x-engage-agent-prompt.md  x_promoter_config.template.json  x_promoter_loop.py
agents/qaqc/: __init__.py  agents.py  example.py  main.py  tools.py
agents/ranker/: __init__.py  agents.py  compare_files.py  example.py  tools.py
agents/researcher/: README.md  __init__.py  agents.py  example.py  main.py  tools.py
agents/scraper/: __init__.py  agents.py  example.py  main.py  tools.py
agents/translator/: agents.py  example.py  tools.py
agents/user_feedback/: __init__.py  agents.py  example.py  tools.py
agents/utils/: __init__.py  agent_utils.py  logger_config.py  prompts_code_agent.yaml  prompts_toolcalling_agent.yaml  telemetry.py
agents/writer-critic/: example.py  main.py
agents/writer_critic/: .gitignore  README.md  __init__.py  (+4 more)
swarms/: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
(+51 files in other folders)
