[tool.poetry]
name = "agents"
version = "0.1.0"
description = "Small, efficient AI agents for automation"
authors = ["Your Name <landonmutch@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pytz = "^2024.1"
smolagents = "^0.1.0"
markdownify = "^0.14.1"
duckduckgo-search = "^7.4.4"
requests = "^2.32.3"
litellm = "^1.61.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 